settled some text alignment issues

--- a/nodeSite/public/stylesheets/style.css
+++ b/nodeSite/public/stylesheets/style.css
@@ -205,7 +205,7 @@ p {
 
 .ClassesDiv {
 	margin: auto;
-	width: 500px;
+	width: 600px;
 }
 
 .submitter {
